--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,8 @@
-<p>nav-bar works!</p>
+<!-- <div [ngClass]="'redirect'">
+    <ul>
+        <li><a routerLink="home" routerLinkActive>Home</a></li>
+        <li><a routerLink="StudentDetails">StudentDetails</a></li>
+    </ul>
+</div> -->
+
+<app-student-list></app-student-list>
