--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,17 @@
-<p>dashboard works!</p>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>home</mat-icon>
+  </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+     <mat-icon (click)="onClick()" class='material-icons-outlined'>logout</mat-icon>
+
+    <!-- <mat-icon (click)="onClick()">logout</mat-icon> -->
+    <!-- <button (click)="onClick()">Log Out</button> -->
+    <span>Student Application</span>
+    <span class="example-spacer"></span>
+    
+  </mat-toolbar>
+<app-nav-bar></app-nav-bar>
