--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,9 +1,9 @@
 .example-spacer {
-    flex: 1 1 auto;
+    flex: 1 ;
   }
   .mat-toolbar{
     background-color:navy;
     height: 50px;
   }
 
- 
+  
