--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,12 +6,14 @@
       <mat-icon>menu</mat-icon>
     </button>
 
+   
      <mat-icon (click)="onClick()" class='material-icons-outlined'>logout</mat-icon>
-
+    
     <!-- <mat-icon (click)="onClick()">logout</mat-icon> -->
     <!-- <button (click)="onClick()">Log Out</button> -->
     <span>Student Application</span>
     <span class="example-spacer"></span>
     
   </mat-toolbar>
-<app-nav-bar></app-nav-bar>
+
+<app-student-list></app-student-list>
