--- a/src/app/components/student-details/student-details.component.html
+++ b/src/app/components/student-details/student-details.component.html
@@ -1,1 +1,135 @@
-<p>student-details works!</p>
+<mat-card class="example-card">
+    <mat-card-title-group>
+      <mat-card-title>STUDENT ID : {{student.id}}</mat-card-title>
+      <mat-card-title>NAME : {{student.name}}</mat-card-title>
+      <mat-card-title>ADMISSION NUMBER : {{student.admissionNumber}}</mat-card-title>
+      <mat-card-title>SECTION : {{student.section}}</mat-card-title>
+      <mat-card-title>DIVISION : {{student.division}}</mat-card-title>
+      <mat-card-title>TOTAL MARKS : {{student.totalMarks}}</mat-card-title>
+      <mat-card-title>PERCENTAGE : {{student.percentage}}</mat-card-title>
+      <mat-card-title>RESULT : {{student.result}}</mat-card-title>
+      <mat-card-title>D.O.B : {{student.dateOfBirth}}</mat-card-title>
+      <mat-card-title>GENDER : {{student.gender}}</mat-card-title>
+      <mat-card-title>NATIONALITY : {{student.nationality}}</mat-card-title>
+      <mat-card-title>ADDRESS : {{student.address.city}},{{student.address.state}},{{student.address.country}},{{student.address.zip}}</mat-card-title>
+      <mat-card-title>SCHOOL NAME : {{student.schoolName}}</mat-card-title>
+      <mat-card-title>MEDIUM : {{student.mediumOfInstruction}}</mat-card-title>
+       <mat-card-title>PHONE : {{student.phoneNumber}}</mat-card-title>
+       <mat-card-title>EMAIL : {{student.email}}</mat-card-title>
+       <mat-card-title>RELIGION : {{student.religion}}</mat-card-title>
+       <mat-card-title>PHONE : {{student.occupation}}</mat-card-title>
+       <mat-card-title>PHONE : {{student.annualIncome}}</mat-card-title>
+       <mat-card-title>PHONE : {{student.annualIncome}}</mat-card-title>
+      
+      
+    </mat-card-title-group>
+   
+  </mat-card>
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<table style="border: 2px;">
+    <tr>
+        <td>student Id:</td>
+        <td>{{student.id}}</td>
+    </tr>
+    <tr>
+        <td>Name:</td>
+        <td>{{student.name}}</td>
+    </tr>
+    <tr>
+        <td>admissionNumber</td>
+        <td>{{student.admissionNumber}}</td>
+    </tr>
+    <tr>
+        <td>section:</td>
+        <td>{{student.section}}</td>
+    </tr>
+    <tr>
+        <td>division:</td>
+        <td>{{student.division}}</td>
+    </tr>
+    <tr>
+        <td>totalMarks:</td>
+        <td>{{student.totalMarks}}</td>
+    </tr>
+    <tr>
+        <td>percentage:</td>
+        <td>{{student.percentage}}</td>
+    </tr>
+    <tr>
+        <td>result:</td>
+        <td>{{student.result}}</td>
+    </tr>
+    <tr>
+        <td>dateOfBirth:</td>
+        <td>{{student.dateOfBirth}}</td>
+    </tr>
+    <tr>
+        <td>gender:</td>
+        <td>{{student.gender}}</td>
+    </tr>
+    <tr>
+        <td>nationality:</td>
+        <td>{{student.nationality}}</td>
+    </tr>
+    <tr>
+        <td>Address:</td>
+        <td>{{student.address.city}},{{student.address.state}},{{student.address.country}},{{student.address.zip}}</td>
+    </tr>
+    <tr>
+        <td>schoolName:</td>
+        <td>{{student.schoolName}}</td>
+    </tr>
+    <tr>
+        <td>mediumOfInstruction:</td>
+        <td>{{student.mediumOfInstruction}}</td>
+    </tr>
+    <tr>
+        <td>phoneNumber:</td>
+        <td>{{student.phoneNumber}}</td>
+    </tr>
+    <tr>
+        <td>email:</td>
+        <td>{{student.email}}</td>
+    </tr>
+
+    <tr>
+        <td>religion:</td>
+        <td>{{student.religion}}</td>
+    </tr>
+
+    <tr>
+        <td>fathername:</td>
+        <td>{{student.fathername}}</td>
+    </tr>
+
+    <tr>
+        <td>occupation:</td>
+        <td>{{student.occupation}}</td>
+    </tr>
+
+    <tr>
+        <td>annualIncome:</td>
+        <td>{{student.annualIncome}}</td>
+    </tr>
+
+    <tr>
+        <td>remark:</td>
+        <td>{{student.remark}}</td>
+    </tr>
+    
+   </table>
+  -->
