--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>home</mat-icon>
   </button>
@@ -11,9 +11,9 @@
     
     <!-- <mat-icon (click)="onClick()">logout</mat-icon> -->
     <!-- <button (click)="onClick()">Log Out</button> -->
-    <span>Student Application</span>
+    <!-- <span>Student Application</span>
     <span class="example-spacer"></span>
     
   </mat-toolbar>
 
-<app-student-list></app-student-list>
+<app-student-list></app-student-list> --> -->
