--- a/src/app/components/student-list/student-list.component.css
+++ b/src/app/components/student-list/student-list.component.css
@@ -1,3 +1,10 @@
 table {
-    width: 200%;
+    width: 150%;
+    background-color: silver;
   }
+  
+  .mat-elevation-z8{
+    overflow: scroll;
+  }
+
+  
