--- a/src/app/components/student-list/student-list.component.html
+++ b/src/app/components/student-list/student-list.component.html
@@ -1,120 +1,143 @@
 
-<div class="mat-elevation-z8">
+<button mat-flat-button color="warn" (click)="gridChange()">View</button>
 
-<table mat-table [dataSource]="students" class="mat-elevation-z8"  >
+<mat-form-field appearance="fill">
+  <mat-select required multiple (selectionChange)="onSelect($event)">
+    <mat-option>-- None --</mat-option>
+      <mat-option [value]="column" *ngFor="let column of columns">{{column}}</mat-option>
+    </mat-select>
+  <mat-label>Select</mat-label>
+</mat-form-field>
+
+
+<div class="mat-elevation-z8" *ngIf="flag">
+
+ 
+ 
+  <table mat-table [dataSource]="students" class="mat-elevation-z8"  >
   
 
     <!-- Position Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let student"> {{student.id}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let student"> {{student.name}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="admissionNumber">
       <th mat-header-cell *matHeaderCellDef> admissionNumber </th>
-      <td mat-cell *matCellDef="let student"> {{student.admissionNumber}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.admissionNumber}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="section">
       <th mat-header-cell *matHeaderCellDef> section </th>
-      <td mat-cell *matCellDef="let student"> {{student.section}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.section}} </td>
     </ng-container>
 
     <ng-container matColumnDef="division">
       <th mat-header-cell *matHeaderCellDef> division </th>
-      <td mat-cell *matCellDef="let student"> {{student.division}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.division}} </td>
     </ng-container>
 
     <ng-container matColumnDef="totalMarks">
       <th mat-header-cell *matHeaderCellDef> totalMarks </th>
-      <td mat-cell *matCellDef="let student"> {{student.totalMarks}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.totalMarks}} </td>
     </ng-container>
 
     <ng-container matColumnDef="percentage">
       <th mat-header-cell *matHeaderCellDef> percentage </th>
-      <td mat-cell *matCellDef="let student"> {{student.percentage}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.percentage}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> email </th>
-      <td mat-cell *matCellDef="let student"> {{student.email}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="result">
       <th mat-header-cell *matHeaderCellDef> result </th>
-      <td mat-cell *matCellDef="let student"> {{student.result}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.result}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateOfBirth">
       <th mat-header-cell *matHeaderCellDef> dateOfBirth </th>
-      <td mat-cell *matCellDef="let student"> {{student.dateOfBirth}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.dateOfBirth | date: 'M/d/yy' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="gender">
       <th mat-header-cell *matHeaderCellDef> gender </th>
-      <td mat-cell *matCellDef="let student"> {{student.gender}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.gender}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nationality">
       <th mat-header-cell *matHeaderCellDef> nationality </th>
-      <td mat-cell *matCellDef="let student"> {{student.nationality}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.nationality}} </td>
     </ng-container>
 
     <ng-container matColumnDef="schoolName">
       <th mat-header-cell *matHeaderCellDef> schoolName </th>
-      <td mat-cell *matCellDef="let student"> {{student.schoolName}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.schoolName}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="mediumOfInstruction">
       <th mat-header-cell *matHeaderCellDef> mediumOfInstruction </th>
-      <td mat-cell *matCellDef="let student"> {{student.mediumOfInstruction}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.mediumOfInstruction}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="phoneNumber">
       <th mat-header-cell *matHeaderCellDef> phoneNumber </th>
-      <td mat-cell *matCellDef="let student"> {{student.phoneNumber}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.phoneNumber}} </td>
     </ng-container>
 
     <ng-container matColumnDef="emergencyContact">
       <th mat-header-cell *matHeaderCellDef> emergencyContact </th>
-      <td mat-cell *matCellDef="let student"> {{student.emergencyContact}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.emergencyContact}} </td>
     </ng-container>
 
     <ng-container matColumnDef="religion">
       <th mat-header-cell *matHeaderCellDef> religion </th>
-      <td mat-cell *matCellDef="let student"> {{student.religion}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.religion}} </td>
     </ng-container>
 
     <ng-container matColumnDef="fathername">
       <th mat-header-cell *matHeaderCellDef> fathername </th>
-      <td mat-cell *matCellDef="let student"> {{student.fathername}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.fathername}} </td>
     </ng-container>
 
     <ng-container matColumnDef="occupation">
       <th mat-header-cell *matHeaderCellDef> occupation </th>
-      <td mat-cell *matCellDef="let student"> {{student.occupation}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.occupation}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="annualIncome">
       <th mat-header-cell *matHeaderCellDef> annualIncome </th>
-      <td mat-cell *matCellDef="let student"> {{student.annualIncome}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.annualIncome}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="remark">
       <th mat-header-cell *matHeaderCellDef> remark </th>
-      <td mat-cell *matCellDef="let student"> {{student.remark}} </td>
+      <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.remark}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <td mat-cell *matCellDef="let element"> <button (click)="editPage(element)"><mat-icon>edit</mat-icon></button></td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef>Delete</th>
+      <td mat-cell *matCellDef="let element" > <button (click)="deleteStudent(element)"><mat-icon>delete</mat-icon></button></td>
     </ng-container>
 
   
@@ -123,10 +146,39 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
+  
+   
 
-   <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons 
-                 aria-label="Select page of periodic student">
-  </mat-paginator>  -->
+</div>
 
+<div *ngIf="flag==false" >
+
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let student of students ">
+        <mat-card class="mat-elevation-z4" (click)="studentDetails(student)" style="width: 250px; height: 300px; display: inline-block;float: left;">
+          <mat-card-header>
+            <mat-card-title>Student Details {{student.id}}</mat-card-title>
+          </mat-card-header>
+         
+          <mat-card-content>
+            {{student.name}}<br>
+            {{student.result}}<br>
+            {{student.remark}}<br>
+          </mat-card-content>
+         
+        </mat-card>
+      </div>
+    </div>
+  </div>
+  
+</div>
+
+<div>
+<mat-paginator *ngIf="temp"[length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[1,5, 10, 25, 100]"
+              aria-label="Select page"
+              (page)="pagination($event)">
+</mat-paginator>
 </div>
